--- a/app/src/main/res/layout/activity_donation_posting_page.xml
+++ b/app/src/main/res/layout/activity_donation_posting_page.xml
@@ -361,7 +361,9 @@
                 android:layout_marginBottom="5dp"
                 android:inputType="textEmailAddress"
                 android:elevation="3dp"
-                android:textSize="15sp">
+                android:textSize="15sp"
+                android:enabled="false"
+                android:textColor="@color/black">
             </EditText>
 
         </LinearLayout>
