--- a/app/src/main/res/layout/activity_volunteer_campaign_summary.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_summary.xml
@@ -91,7 +91,7 @@
             <LinearLayout
                 android:id="@+id/campaignDetailsLinearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
+                android:layout_height="400dp"
                 android:orientation="vertical"
                 android:background="@drawable/bg_radius_ten_gray"
                 android:layout_below="@id/imageLinearLayout"
@@ -191,13 +191,34 @@
                             android:textColor="@color/black"
                             android:textSize="15sp"/>
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/noOfVolunteersLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No. of Volunteers needed: "
+                        android:textSize="15sp"
+                        android:layout_below="@id/descriptionLinearLayout"
+                        android:layout_marginTop="5dp"/>
+                    <TextView
+                        android:id="@+id/noOfVolunteersTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" #"
+                        android:textSize="15sp"
+                        android:layout_below="@id/descriptionLinearLayout"
+                        android:layout_toEndOf="@id/noOfVolunteersLabel"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/black"/>
+
                     <TextView
                         android:id="@+id/startDateLabel"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:text="Start Date: "
                         android:textSize="15sp"
-                        android:layout_below="@id/descriptionLinearLayout"
+                        android:layout_below="@id/noOfVolunteersLabel"
                         android:layout_marginTop="5dp"/>
                     <TextView
                         android:id="@+id/startDateTextView"
@@ -205,7 +226,7 @@
                         android:layout_height="wrap_content"
                         android:text="Insert Start Date"
                         android:textSize="15sp"
-                        android:layout_below="@id/descriptionLinearLayout"
+                        android:layout_below="@id/noOfVolunteersTextView"
                         android:layout_toEndOf="@id/startDateLabel"
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="5dp"
