--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -72,9 +72,11 @@
                 android:hint="Email"
                 android:textColorHighlight="@color/black"
                 android:background="@drawable/bg_login_white_radius"
-                android:elevation="5dp">
-
-            </EditText>
+                android:elevation="5dp"
+                android:scrollHorizontally="true"
+                android:maxLines="1"
+                android:inputType="textEmailAddress"
+            />
 
         </LinearLayout>
 
@@ -111,7 +113,9 @@
                     android:elevation="5dp"
                     android:hint="Password"
                     android:inputType="textPassword"
-                    android:paddingLeft="15dp" />
+                    android:paddingLeft="15dp"
+                    android:scrollHorizontally="true"
+                    android:maxLines="1"/>
 
                 <ImageView
                     android:id="@+id/passwordVisibilityToggle"
