--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -87,6 +87,8 @@
             android:hint="Email"
             android:layout_marginHorizontal="15dp"
             android:paddingLeft="20dp"
+            android:scrollHorizontally="true"
+            android:maxLines="1"
             android:inputType="textEmailAddress"
             android:layout_weight="1"
             android:layout_marginBottom="20dp"
@@ -108,7 +110,9 @@
                 android:layout_centerInParent="true"
                 android:paddingLeft="20dp"
                 android:background="@drawable/bg_login_white_radius"
-                android:elevation="5dp" />
+                android:elevation="5dp"
+                android:scrollHorizontally="true"
+                android:maxLines="1"/>
 
             <ImageView
                 android:id="@+id/passwordToggle"
@@ -137,7 +141,9 @@
                 android:elevation="5dp"
                 android:hint="Confirm Password"
                 android:inputType="textPassword"
-                android:paddingLeft="20dp" />
+                android:paddingLeft="20dp"
+                android:scrollHorizontally="true"
+                android:maxLines="1"/>
 
             <ImageView
                 android:id="@+id/confirmPasswordToggle"
