--- a/app/src/main/res/layout/forgot_password_dialog.xml
+++ b/app/src/main/res/layout/forgot_password_dialog.xml
@@ -15,7 +15,9 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/bg_login_white_radius"
-        android:elevation="5dp"/>
+        android:elevation="5dp"
+        android:scrollHorizontally="true"
+        android:maxLines="1"/>
 
 
 </RelativeLayout>
