--- a/app/src/main/res/layout/row_featured_opportunities.xml
+++ b/app/src/main/res/layout/row_featured_opportunities.xml
@@ -26,17 +26,18 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/image1"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginHorizontal="10dp"
             android:text="Title"
             android:textSize="15dp"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:textAlignment="center"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:maxLines="2"/>
 
 <!--        <TextView-->
 <!--            android:id="@+id/category"-->
