--- a/app/src/main/res/layout/activity_donation_campaign_status_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_status_page.xml
@@ -73,17 +73,17 @@
                     android:textSize="20sp"
                     android:textStyle="bold"></TextView>
 
-                <ImageView
+                <com.intprog.helpinghands.customviews.RoundedImageView
                     android:id="@+id/campaignImageView"
                     android:layout_width="300dp"
                     android:layout_height="200dp"
+                    android:src="@drawable/placeholder_image1"
                     android:layout_below="@+id/Donation"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
-                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:elevation="5dp"
-                    android:scaleType="centerCrop"></ImageView>
+                    android:scaleType="centerCrop"></com.intprog.helpinghands.customviews.RoundedImageView>
 
                 <TextView
                     android:id="@+id/titleTextView"
