--- a/app/src/main/res/layout/dialog_donate.xml
+++ b/app/src/main/res/layout/dialog_donate.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:text="Enter Donation Amount"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/amountEditText"
@@ -20,12 +21,45 @@
         android:hint="Enter amount in PHP"
         android:inputType="numberDecimal"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:id="@+id/donationTypeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="How would you like to donate?"
+        android:textSize="18sp"
+        android:layout_marginBottom="8dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
+
+    <RadioGroup
+        android:id="@+id/donationTypeRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <RadioButton
+            android:id="@+id/publiclyRadioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="publicly" />
+
+        <RadioButton
+            android:id="@+id/anonymouslyRadioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="anonymously" />
+    </RadioGroup>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
 
         <Button
             android:id="@+id/confirmButton"
