donation validation fixed

--- a/app/src/main/res/layout/activity_donation_posting_page.xml
+++ b/app/src/main/res/layout/activity_donation_posting_page.xml
@@ -403,7 +403,8 @@
                 android:inputType="phone"
                 android:elevation="3dp"
                 android:textSize="15sp"
-                android:maxLength="11">
+                android:maxLength="11"
+                >
             </EditText>
 
         </LinearLayout>
